--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <declare-styleable name="AppTheme">
+        <!-- Define a theme attribute -->
+        <attr name="profile_circle" format="color"/>
+        <attr name="profile_container" format="color"/>
+    </declare-styleable>
     <!-- Base application theme. -->
     <style name="Base.Theme.Clarity" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="profile_circle">@color/dark_purple</item>
+        <item name="profile_container">@color/white</item>
     </style>
 
     <style name="Theme.Clarity" parent="Base.Theme.Clarity" />
