--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,20 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <declare-styleable name="AppTheme">
-        <!-- Define a theme attribute -->
-        <attr name="profile_circle" format="color"/>
-        <attr name="profile_container" format="color"/>
-    </declare-styleable>
     <!-- Base application theme. -->
     <style name="Base.Theme.Clarity" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="background">@color/bg_dark</item>
-        <item name="profile_circle">@color/purple</item>
-        <item name="profile_container">@color/bg_dark</item>
     </style>
-
     <style name="ScreenBackground"><item name="android:background">@color/dark_grey</item></style>
-    <style name="Container"><item name="android:background">@color/dark_grey</item></style>
+    <style name="Container"><item name="android:background">@color/wolf_grey</item></style>
     <style name="Accent1"><item name="android:textColor">@color/purple</item></style>
     <style name="Subtitle"><item name="android:textColor">@color/grey</item></style>
     <style name="Typography"><item name="android:textColor">@color/light_grey</item></style>
