--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -22,11 +22,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/purpleBar"
         app:layout_constraintVertical_bias="0.0" />
-        
+
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         app:type="one_day_picker"
-        app:headerColor="@color/black"
+        app:headerColor="@color/white"
         app:headerLabelColor="@color/white"
         app:daysLabelsColor="@color/black"
         app:pagesColor="@color/white"
@@ -39,6 +39,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:background="@color/white"
