--- a/app/src/main/res/drawable/grey_rectangle.xml
+++ b/app/src/main/res/drawable/grey_rectangle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#A4A7B0" /> <!-- Background color of the box -->
+    <solid android:color="#E6E9EE" /> <!-- Background color of the box -->
     <corners android:radius="30dp" />
 
 </shape>
