--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,10 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="40dp"
-    android:paddingTop="40dp"
-    android:paddingRight="40dp"
-    android:paddingBottom="40dp"
+    android:paddingLeft="70dp"
+    android:paddingTop="50dp"
+    android:paddingRight="70dp"
+    android:paddingBottom="50dp"
     tools:context=".ui.login.LoginActivity">
 
 
@@ -60,7 +60,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_gravity="start"
         android:background="@drawable/purple_rectangle"
         android:enabled="true"
@@ -71,7 +71,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/new_account"
@@ -87,9 +88,9 @@
         android:textColor="#967ADC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintVertical_bias="0.134" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
