--- a/app/src/main/res/layout/create_new.xml
+++ b/app/src/main/res/layout/create_new.xml
@@ -26,16 +26,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/add_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/baseline_add_circle_24"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/RoundedShapeAppearance"
+        app:srcCompat="@drawable/baseline_add_circle_24" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -45,7 +46,7 @@
         android:entries="@array/choices"
         app:layout_constraintBottom_toTopOf="@+id/enter_password"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.196"
+        app:layout_constraintVertical_bias="0.185"
         tools:layout_editor_absoluteX="35dp" />
 
     <EditText
@@ -76,7 +77,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        app:layout_constraintVertical_bias="0.285" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/email"
@@ -84,7 +85,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="316dp"
         android:background="@drawable/box_outline"
-        android:hint="Must include @XXXX.sg"
+        android:hint="Must include @"
         android:inputType="textEmailAddress"
         android:padding="8dp"
         android:selectAllOnFocus="true"
@@ -106,7 +107,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enter_password"
-        app:layout_constraintVertical_bias="0.285"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
     <EditText
@@ -115,7 +116,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="404dp"
         android:background="@drawable/box_outline"
-        android:hint="At least one number and one symbol"
+        android:hint="Must contain at least 8 characters"
         android:inputType="textPassword"
         android:padding="8dp"
         android:selectAllOnFocus="true"
@@ -137,7 +138,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="0.285"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
     <EditText
@@ -184,7 +185,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.889"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
     <androidx.appcompat.widget.AppCompatButton
